# Text2Cast

./: .env.example  .gitignore  README.md  config.yaml.example  log.txt  main.py  openai.py  pyproject.toml  requests.py  requirements.txt  yaml.py
dotenv/: __init__.py
openai/: __init__.py
requests/: __init__.py
tests/: test_cli.py  test_script_generator.py  test_summarizer.py  test_tts.py  test_voice_clone.py  yaml.py
text2cast/: __init__.py  cli.py  config.py  script_generator.py  script_v2.py  summarizer.py  tts.py  utils.py  voice_clone.py
yaml/: __init__.py
