[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text2cast"
version = "0.1.0"
description = "Pipeline that converts long text into a podcast script and audio."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pyyaml",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
text2cast = "text2cast.cli:main"
